--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ overflow-x:hidden;
 /* Background video */
 .bg-video{
 position:fixed;inset:0;width:100%;height:100%;object-fit:cover;z-index:-2;
-filter:brightness(1.1) saturate(0.85);
+filter:brightness(0.85) saturate(0.9);
 }
 
 /* overlay glow */
@@ -55,8 +55,8 @@ backdrop-filter:blur(6px);position:sticky;top:0;z-index:20;border-bottom:1px sol
   background: transparent;
   border: none;
   cursor: pointer;
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -66,7 +66,7 @@ backdrop-filter:blur(6px);position:sticky;top:0;z-index:20;border-bottom:1px sol
 
 .menu-btn span {
   display: block;
-  width: 25px;
+  width: 20px;
   height: 3px;
   background: linear-gradient(90deg, var(--accent), var(--gold));
   border-radius: 3px;
@@ -88,25 +88,25 @@ backdrop-filter:blur(6px);position:sticky;top:0;z-index:20;border-bottom:1px sol
 
 /* Navbar for mobile/tablet */
 .nav {
-  display: flex;
+  display: ruby-base-container;
   gap: 20px;
-  align-items: center;
+  align-items: left;
 }
 
 @media (max-width: 900px) {
   .nav {
-    position: fixed;
+    position: inherit;
     top: 0;
     right: -300px; /* hidden by default */
     height: 100vh;
     width: 260px;
-    background: rgba(3,6,10,0.96);
+    background: #fbfdfff5;
     flex-direction: column;
-    padding: 80px 20px;
+    padding: 3px 3px;
     gap: 20px;
     transition: right 0.3s ease;
-    border-radius: 0 0 0 10px;
-    z-index: 25;
+    border-radius: 10px 0 0 10px;
+    z-index: -1;
   }
 
   .nav.show {
@@ -114,7 +114,7 @@ backdrop-filter:blur(6px);position:sticky;top:0;z-index:20;border-bottom:1px sol
   }
 
   .menu-btn {
-    display: flex;
+    display: ruby-base-container;
   }
 }
 
@@ -316,7 +316,7 @@ filter:blur(40px);pointer-events:none;z-index:1;
 .modal-grid{grid-template-columns:1fr;}
 .menu-btn{display:flex;}
 .nav{position:fixed;right:14px;top:70px;background:rgba(3,6,10,0.96);padding:12px;border-radius:10px;flex-direction:column;gap:8px;display:none;}
-.nav.show{display:flex;}
+.nav.show{display:ruby-base-container;}
 }
 @media (max-width:480px){
 .hero h1{font-size:1.8rem;}
@@ -605,8 +605,8 @@ html {
     top: 70px;
     right: 14px;
     background: rgba(3, 6, 10, 0.96);
-    padding: 14px;
-    border-radius: 10px;
+    padding: 25px;
+    border-radius: 21px;
     flex-direction: column;
     gap: 10px;
     display: none;
@@ -614,6 +614,8 @@ html {
 
   .nav.show {
     display: flex;
+    height: min-content;
+    width: 27%;
   }
 
   .menu-btn {
@@ -690,4 +692,3 @@ html {
     padding: 100px 40px;
   }
 }
-
